--- a/level_two_solved.ipynb
+++ b/level_two_solved.ipynb
@@ -106,16 +106,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4opIZCHMWHja",
-        "outputId": "f2f89acf-0901-49f0-c29c-fa7afa3d40a2"
+        "outputId": "2698df2e-7306-43c8-836d-e2960d9e430d"
       },
       "source": [
         "from pyspark import SparkFiles\r\n",
         "url = \"https://s3.amazonaws.com/amazon-reviews-pds/tsv/amazon_reviews_us_Video_Games_v1_00.tsv.gz\"\r\n",
         "spark.sparkContext.addFile(url)\r\n",
         "video_games_df = spark.read.csv(SparkFiles.get(\"amazon_reviews_us_Video_Games_v1_00.tsv.gz\"), sep=\"\\t\", header=True)\r\n",
-        "video_games_df.show()"
+        "video_games_df.show()\r\n",
+        "video_games_df = video_games_df.dropna()\r\n",
+        "video_games_df = video_games_df.drop_duplicates()"
       ],
-      "execution_count": 3,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -167,13 +169,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hh7Iy7vsWVNt",
-        "outputId": "a830e82e-0cbd-402c-9e41-c5e193014891"
+        "outputId": "26a0d2ca-cc42-4342-ba67-ca9bcd6e1aeb"
       },
       "source": [
         "filtered_video_games_df = video_games_df.select([\"star_rating\", \"helpful_votes\", \"total_votes\", \"vine\", \"verified_purchase\"])\r\n",
         "filtered_video_games_df.show(10)"
       ],
-      "execution_count": 4,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -181,16 +183,16 @@
             "+-----------+-------------+-----------+----+-----------------+\n",
             "|star_rating|helpful_votes|total_votes|vine|verified_purchase|\n",
             "+-----------+-------------+-----------+----+-----------------+\n",
-            "|          5|            0|          0|   N|                Y|\n",
-            "|          5|            0|          0|   N|                Y|\n",
-            "|          1|            0|          1|   N|                Y|\n",
-            "|          3|            0|          0|   N|                Y|\n",
+            "|          5|            0|          0|   N|                N|\n",
             "|          4|            0|          0|   N|                Y|\n",
-            "|          1|            0|          0|   N|                Y|\n",
+            "|          5|            2|          2|   N|                N|\n",
             "|          5|            0|          0|   N|                Y|\n",
             "|          5|            0|          0|   N|                Y|\n",
+            "|          5|            5|          6|   N|                Y|\n",
             "|          5|            0|          0|   N|                Y|\n",
+            "|          1|            2|          6|   N|                Y|\n",
             "|          4|            0|          0|   N|                Y|\n",
+            "|          5|            1|          1|   N|                Y|\n",
             "+-----------+-------------+-----------+----+-----------------+\n",
             "only showing top 10 rows\n",
             "\n"
@@ -206,14 +208,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "S4ZLuf-1WebH",
-        "outputId": "29184db0-8e7e-42bd-ee74-ca6f6b109b06"
+        "outputId": "07625993-5956-4a81-a966-7d200fae25e0"
       },
       "source": [
         "# Filter for greater than 20 total votes\r\n",
         "total_votes_df = filtered_video_games_df.filter(filtered_video_games_df[\"total_votes\"] >= 20)\r\n",
         "total_votes_df.show(10)"
       ],
-      "execution_count": 5,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -221,16 +223,16 @@
             "+-----------+-------------+-----------+----+-----------------+\n",
             "|star_rating|helpful_votes|total_votes|vine|verified_purchase|\n",
             "+-----------+-------------+-----------+----+-----------------+\n",
-            "|          1|           21|         34|   N|                N|\n",
-            "|          1|           21|         35|   N|                Y|\n",
-            "|          1|          147|        175|   N|                Y|\n",
-            "|          1|           14|         31|   N|                Y|\n",
-            "|          2|           55|         60|   N|                N|\n",
-            "|          1|           51|         65|   N|                Y|\n",
-            "|          4|           31|         36|   N|                N|\n",
-            "|          2|           19|         34|   N|                Y|\n",
-            "|          5|           28|         31|   N|                N|\n",
-            "|          1|            4|         32|   N|                N|\n",
+            "|          1|           45|         45|   N|                Y|\n",
+            "|          1|           12|         22|   N|                Y|\n",
+            "|          5|            4|         21|   N|                N|\n",
+            "|          4|           20|         25|   N|                Y|\n",
+            "|          1|           18|         26|   N|                Y|\n",
+            "|          1|           28|        348|   N|                N|\n",
+            "|          5|           31|         33|   N|                N|\n",
+            "|          1|            5|         21|   N|                N|\n",
+            "|          1|            7|         55|   N|                Y|\n",
+            "|          5|            1|         26|   N|                Y|\n",
             "+-----------+-------------+-----------+----+-----------------+\n",
             "only showing top 10 rows\n",
             "\n"
@@ -246,14 +248,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w5mjw7YhWmjs",
-        "outputId": "3fb22022-f692-446c-f665-b3cabb01dd05"
+        "outputId": "61714c98-edf9-4a01-8a93-5f37b88a065b"
       },
       "source": [
         "# Filter for greater than 50% helpful vote percentage\r\n",
         "helpful_votes_df = total_votes_df.filter(total_votes_df[\"helpful_votes\"]/total_votes_df[\"total_votes\"] >= 0.5)\r\n",
         "helpful_votes_df.show(10)"
       ],
-      "execution_count": 6,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -261,16 +263,16 @@
             "+-----------+-------------+-----------+----+-----------------+\n",
             "|star_rating|helpful_votes|total_votes|vine|verified_purchase|\n",
             "+-----------+-------------+-----------+----+-----------------+\n",
-            "|          1|           21|         34|   N|                N|\n",
-            "|          1|           21|         35|   N|                Y|\n",
-            "|          1|          147|        175|   N|                Y|\n",
-            "|          2|           55|         60|   N|                N|\n",
-            "|          1|           51|         65|   N|                Y|\n",
-            "|          4|           31|         36|   N|                N|\n",
-            "|          2|           19|         34|   N|                Y|\n",
-            "|          5|           28|         31|   N|                N|\n",
-            "|          2|          151|        198|   N|                N|\n",
-            "|          1|           49|         51|   N|                Y|\n",
+            "|          1|           45|         45|   N|                Y|\n",
+            "|          1|           12|         22|   N|                Y|\n",
+            "|          4|           20|         25|   N|                Y|\n",
+            "|          1|           18|         26|   N|                Y|\n",
+            "|          5|           31|         33|   N|                N|\n",
+            "|          3|           19|         20|   N|                Y|\n",
+            "|          1|           20|         24|   N|                N|\n",
+            "|          4|          121|        129|   N|                Y|\n",
+            "|          5|          208|        227|   N|                N|\n",
+            "|          1|           22|         34|   N|                N|\n",
             "+-----------+-------------+-----------+----+-----------------+\n",
             "only showing top 10 rows\n",
             "\n"
@@ -295,14 +297,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "unGE2NQEWoRW",
-        "outputId": "c8484d16-edf6-45db-855b-59b6eb8bd842"
+        "outputId": "2bc11975-2360-4164-e6c1-290d15e3e343"
       },
       "source": [
         "# Paid reviews\r\n",
         "paid_df = helpful_votes_df.filter(helpful_votes_df['vine']== 'Y')\r\n",
         "paid_df.describe().show(10)"
       ],
-      "execution_count": 7,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -312,7 +314,7 @@
             "+-------+------------------+-----------------+------------------+----+-----------------+\n",
             "|  count|                94|               94|                94|  94|               94|\n",
             "|   mean| 4.202127659574468|54.59574468085106|61.787234042553195|null|             null|\n",
-            "| stddev|0.9791348741656414|65.26098459822538| 68.90976994895392|null|             null|\n",
+            "| stddev|0.9791348741656415|65.26098459822539| 68.90976994895394|null|             null|\n",
             "|    min|                 1|              111|               102|   Y|                N|\n",
             "|    max|                 5|               97|                88|   Y|                N|\n",
             "+-------+------------------+-----------------+------------------+----+-----------------+\n",
@@ -329,14 +331,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HSsdXlNKWwQJ",
-        "outputId": "28344ee3-8ac1-478b-f313-e97671bd05d5"
+        "outputId": "0a392459-e603-4b25-c9ec-4870a113c8c3"
       },
       "source": [
         "# Unpaid reviews\r\n",
         "unpaid_df = helpful_votes_df.filter(helpful_votes_df['vine']== 'N')\r\n",
         "unpaid_df.describe().show()"
       ],
-      "execution_count": 8,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -346,7 +348,7 @@
             "+-------+------------------+------------------+------------------+-----+-----------------+\n",
             "|  count|             40471|             40471|             40471|40471|            40471|\n",
             "|   mean|  3.34765634651973|47.428405524943784|55.891057794470115| null|             null|\n",
-            "| stddev|1.6418850112078023|117.53763370687005|127.40280622961905| null|             null|\n",
+            "| stddev|1.6418850112078023|117.53763370687122|127.40280622961966| null|             null|\n",
             "|    min|                 1|                10|               100|    N|                N|\n",
             "|    max|                 5|               999|               999|    N|                Y|\n",
             "+-------+------------------+------------------+------------------+-----+-----------------+\n",
@@ -372,7 +374,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5zoGfZw9W27X",
-        "outputId": "cd55dab1-7101-47d1-b348-50ab081116b9"
+        "outputId": "200da7e0-9ca2-405e-9caa-9a83aea81d58"
       },
       "source": [
         "paid_five_star_number = paid_df[paid_df['star_rating'] == 5].count()\r\n",
@@ -380,16 +382,16 @@
         "percentage_five_star_vine = round(float(paid_five_star_number) / float(paid_number),4)\r\n",
         "print(f'Number of paid reviews {paid_number}')\r\n",
         "print(f'Number of paid five star reviews {paid_five_star_number}')\r\n",
-        "print(f'Percantage of paid reviews that are five stars {percentage_five_star_vine * 100}%')"
+        "print(f'Percentage of paid reviews that are five stars {percentage_five_star_vine * 100}%')"
       ],
-      "execution_count": 9,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Number of paid reviews 94\n",
             "Number of paid five star reviews 48\n",
-            "Percantage of paid reviews that are five stars 51.06%\n"
+            "Percentage of paid reviews that are five stars 51.06%\n"
           ],
           "name": "stdout"
         }
@@ -411,7 +413,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zMUsW--DXAYl",
-        "outputId": "6526f922-83ce-478a-cc67-10962e311661"
+        "outputId": "414f8e1c-1965-4859-9f67-cdbf0253c777"
       },
       "source": [
         "unpaid_five_star_number = unpaid_df[unpaid_df['star_rating']== 5].count()\r\n",
@@ -419,16 +421,16 @@
         "percentage_five_star_non_vine = round(float(unpaid_five_star_number) / float(unpaid_number),4)\r\n",
         "print(f'Number of unpaid reviews {unpaid_number}')\r\n",
         "print(f'Number of unpaid five star reviews {unpaid_five_star_number}')\r\n",
-        "print(f'Percantage of paid reviews that are five stars {percentage_five_star_non_vine * 100}%')"
+        "print(f'Percentage of unpaid reviews that are five stars {percentage_five_star_non_vine * 100}%')"
       ],
-      "execution_count": 10,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Number of unpaid reviews 40471\n",
             "Number of unpaid five star reviews 15663\n",
-            "Percantage of paid reviews that are five stars 38.7%\n"
+            "Percentage of unpaid reviews that are five stars 38.7%\n"
           ],
           "name": "stdout"
         }
